# megashool_1

./: README.md  multi-agent_case_students.docx  pyproject.toml  requirements.txt
logs/: example_secret_scenario_log.json  hallucination_trap_log.json  interview_log_1.json  interview_log_2.json  interview_log_20260129_205156.json  interview_log_20260129_205233.json  interview_log_20260129_214607.json  interview_log_20260129_223050.json  interview_log_20260130_150956.json  interview_log_20260130_151339.json  interview_log_20260130_152336.json  interview_log_20260130_153137.json  interview_log_20260130_153849.json  interview_log_20260130_154924.json  interview_log_20260130_164002.json  interview_log_20260130_173426.json  interview_log_20260130_180036.json  interview_log_20260130_180953.json  interview_log_20260130_181927.json  interview_log_20260130_182523.json  interview_log_20260130_190406.json  interview_log_20260130_190654.json  interview_log_20260130_191024.json  interview_log_20260130_191953.json  interview_log_20260130_192010.json  interview_log_20260130_211250.json  interview_log_3.json  interview_log_4.json  interview_log_5.json  off_topic_log.json  role_reversal_log.json
scenarios/: example_secret_scenario.json  hallucination_trap.json  off_topic.json  role_reversal.json
src/interview_coach/: __init__.py  config.py  crewai_setup.py  logger.py  logic.py  main.py  topics.py  (+6 more)
tests/: conftest.py  test_confidence.py  test_config_openrouter.py  test_log_schema.py  test_next_action.py  test_router.py  test_scenario_runner.py  test_topic_stickiness.py  test_topics.py
